Blender rounds up values #79594

Closed
opened 2020-08-06 17:02:48 +02:00 by W.Volbers · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-04 21:33, hash: 3ebe97c06b
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender rounds up values in the transformpanel!

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
load blenderfile strange001.blend

values.JPG

select in EditMode Bone.003
view the Head x-Translation value=3m
click inside this property-window , the value shows now 2.99527 m

Values_Input.JPG

strange001.blend

//I almost went crazy,
as I didn't get it
why the bone according to displayed values,
still looked tilted//

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-04 21:33, hash: `3ebe97c06b` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender rounds up values in the transformpanel! **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] load blenderfile strange001.blend ![values.JPG](https://archive.blender.org/developer/F8752517/values.JPG) select in EditMode Bone.003 view the Head x-Translation value=**3m** click inside this property-window , the value shows now **2.99527 m** ![Values_Input.JPG](https://archive.blender.org/developer/F8752520/Values_Input.JPG) [strange001.blend](https://archive.blender.org/developer/F8752522/strange001.blend) //I almost went crazy, as I didn't get it why the bone according to displayed values, still looked tilted//
Author

Added subscriber: @walt-3

Added subscriber: @walt-3

Added subscriber: @sharaths21312

Added subscriber: @sharaths21312

I'm not sure if this is intended behavior, but this is the way pretty much every box that requires a number input works, even ones in the preferences.
Edit: the numbers in the "add

I'm not sure if this is intended behavior, but this is the way pretty much every box that requires a number input works, even ones in the preferences. Edit: the numbers in the "add <object>" menu ![image.png](https://archive.blender.org/developer/F8755000/image.png) doesn't seem to work this way.
Author

i would have at least one option to choose this behavior in the preferences

as this example also shows,
like in this case the bone which cannot be precisely aligned with rounded(not showing) values ,
( head 3, tail 3, the bone should be aligned in Viewport)
but Blender tells me the tail is at 3 m but in reality (internal) 2.99527 m!
It's about me to seeing a reliable value, I don't want to to work by eye. ; )
I hope this makes sense.

i would have at least one option to choose this behavior in the preferences as this example also shows, like in this case the bone which cannot be precisely aligned with rounded(not showing) values , ( head 3, tail 3, the bone should be aligned in Viewport) but Blender tells me the tail is at 3 m but in reality (internal) 2.99527 m! It's about me to seeing a reliable value, I don't want to to work by eye. ; ) I hope this makes sense.
Author

Values01.JPG

if the radius/tail Z/ Length is shown the 4th digit after the comma I expect this from all values

![Values01.JPG](https://archive.blender.org/developer/F8755139/Values01.JPG) if the radius/tail Z/ Length is shown the 4th digit after the comma I expect this from all values

Added subscriber: @iss

Added subscriber: @iss

Technically this is not a bug. The property doesn't have RNA_def_property_ui_range defined. But I would guess that this is not by design.

Technically this is not a bug. The property doesn't have `RNA_def_property_ui_range` defined. But I would guess that this is not by design.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 8556e801a7

This issue was referenced by 8556e801a7b29e6c1989db6acf216a861c467273

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-08-17 20:56:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79594
No description provided.